tests/expected_invalid_generic_reason_decl.diag.out
<input>:2:22: error: reason declarations may not be generic
    public reason Failure<T> {
                         ^
